@@ -26,8 +26,8 @@
 	   "CONVERT-FROM-FOREIGN-STRING" "ALLOCATE-FOREIGN-STRING" 
            "WITH-FOREIGN-STRING" "WITH-FOREIGN-STRINGS"
            "FOREIGN-STRING-LENGTH" "WITH-FOREIGN-OBJECT"
-	   "FIND-FOREIGN-LIBRARY" "LOAD-FOREIGN-LIBRARY" "WITH-FOREIGN-STRING"
-	   "WITH-FOREIGN-STRINGS" "ENSURE-CHAR-STORABLE" "DEF-TYPE"
+	   "FIND-FOREIGN-LIBRARY" "LOAD-FOREIGN-LIBRARY"
+	   "ENSURE-CHAR-STORABLE" "DEF-TYPE"
 	   "WITH-CSTRING" "CONVERT-TO-CSTRING" "CONVERT-FROM-CSTRING" "FREE-CSTRING"
            "WITH-CAST-POINTER" "WITH-CSTRINGS"
 	   )
