@@ -33,6 +33,10 @@ ECL 0.9h
    true bignums then, just long long int if possible; doesn't work with native
    compilation because compiler needs true bignums).
 
+* System design:
+
+ - ECL's own conservative garbage collector works again.
+
 * Visible changes:
 
  - The code for handling command line options has been redesigned. Now multiple
